# cutak

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  test.cu
ai/: CMakeLists.txt  ai.cpp  alphabeta.hpp  bot.cpp  client.cpp  eval.cpp  eval.hpp  solve3.cpp  ttable.hpp
libtak/: '  CMakeLists.txt  a.out  alphabeta.cu  gen.cpp
libtak/include/tak/: board.hpp  dynamic.hpp  game.hpp  move.hpp  ptn.hpp  tak.hpp  tps.hpp
libtak/include/tak/net/: message.hpp
libtak/src/tak/: dynamic.cpp
libtak/src/tak/net/: message.cpp
util/: CMakeLists.txt  util.hpp
util/include/: util.hpp
util/src/: util.cu
